[package]
name = "consumer_service"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = {version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "signal"]}
mongodb = "2.8.2"
serde_json = {version = "1.0.117", features = ["default"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_with = {version = "3.8.1"}
sqlx-oldapi = {version = "0.6.22", features = ["runtime-tokio-native-tls", "chrono", "mssql", "json", "decimal", "macros", "sqlx-macros"]}
dotenvy = "0.15.7"
futures = {version = "0.3.30"}
chrono = {version = "0.4.38", features = ["serde"]}
anyhow = "1.0.86"
derive_more = "0.99.18"
log = "0.4.21"
log4rs = { version = "1.3.0", features = ["gzip"] }
lapin = { version = "2.3.4", default-features = false, features = ["native-tls"]  }
warp = "0.3.7"


[[bin]]
name = "consumer_service"
path = "src/bin/main.rs"

[lib]
name = "tpt_consumer"
path = "src/lib/mod.rs"


